--- a/pfe/password1/templates/password.html
+++ b/pfe/password1/templates/password.html
@@ -1,6 +1,6 @@
 <html>
       <head>
-            <title>Flask app</title>
+            <title>Mot de pass</title>
             
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
